tarmac/new_pattern24/kubernetes/applications/bm/overlays/environments/qa/app-bm-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:946884638317:certificate/eb9e02b2-79fb-420e-b493-5ecd26e8bd84
    alb.ingress.kubernetes.io/load-balancer-name: bm
    alb.ingress.kubernetes.io/group.name: bm
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}, {"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: bm.sullivancotter.com
  labels:
    app.kubernetes.io/instance: bm
  name: bm
spec:
  ingressClassName: alb
  rules:
  - host: bm.sullivancotter.com
    http:
      paths:
      - backend:
          service:
            name: app-bm-ui
            port:
              name: https
        path: /
        pathType: Prefix
      - backend:
          service:
            name: app-bm-service
            port:
              name: https
        path: /api/tiles
        pathType: Prefix
      - backend:
          service:
            name: app-bm-service
            port:
              name: https
        path: /api/surveys
        pathType: Prefix
      - backend:
          service:
            name: app-bm-service
            port:
              name: https
        path: /api/users
        pathType: Prefix
      - backend:
          service:
            name: app-bm-service
            port:
              name: https
        path: /swagger
        pathType: Prefix
